--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@11ty/eleventy": "^0.11.0"
   },
   "dependencies": {
-    "moment": "^2.29.1"
+    "moment": "^2.29.1",
+    "netlify-cms-app": "^2.14.14"
   }
 }
